--- a/style.css
+++ b/style.css
@@ -11,4 +11,8 @@ div#counter {
     position: absolute;
     bottom: 0;
     right: 0;
+    height: 16px;
+    background-color: black;
+    border: black 3px solid;
+    border-radius: 3px;
 }
